testcases/phase1/check02stla-check2.rc
function : int main()
{
  int x;
  int y;
  int z;
  float a;
  float b;
  float c;

// pass;
  x++;
  x--;
  ++x;
  --x;
  x++ + --y;

  a++;
  a--;
  ++a;
  --a;
  a++ + --b;

x = 0;
y = -1;
z = 2;
a = 0.2;
b = -2.4;

y = x++;
y = x--;
y = ++x;
y = --x;
z = x++ + --y;
a = x++ + --y;

b = a++;
b = a--;
b = ++a;
b = --a;
c = a++ + --b;

// error
bool w;
w++;
w--;
++w;
--w;

1++;
1.2++;
true++;

2--;
2.3--;
false--;

++1;
++1.2;
++true;

--2;
--2.3;
--false;

--(y++); // should pass

  return 0;
}